<resources>
    <string name="app_name">FoodDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="logout">Logout</string>
    <string name="empty_email">La mail non può essere vuota</string>
    <string name="empty_password">La password non può essere vuota</string>
    <string name="empty_name">Il nome non può essere vuoto</string>
    <string name="family_settings">Impostazioni Famiglia</string>
    <string name="join_family">Unisciti ad una famiglia</string>
    <string name="family_code">Codice Famiglia</string>
    <string name="join">Unisciti</string>
    <string name="create_family">Crea una famiglia</string>
    <string name="create">Crea</string>
    <string name="family_name">Nome Famiglia</string>
    <string name="family_code_empty">Il codice non può essere vuoto</string>
    <string name="family_code_length_6">Il codice deve avere 6 lettere</string>
    <string name="family_code_not_exists">Il codice famiglia non esiste</string>
    <string name="family">Famiglia</string>
    <string name="code">Codice</string>
    <string name="members">Membri</string>
    <string name="add_product">Aggiungi Prodotto</string>
    <string name="done">Fatto</string>
    <string name="product_name">Nome Prodotto</string>
    <string name="portion">Porzione</string>
    <string name="unit">Unità</string>
    <string name="grams">grammi</string>
    <string name="expirations">Scadenze</string>
    <string name="amount">Quantità</string>
    <string name="expiration_date">Data di scadenza</string>
    <string name="add_recipe">Aggiungi Ricetta</string>
    <string name="person">persone</string>
    <string name="ingredients">Ingredienti</string>
    <string name="category">Categoria</string>
    <string name="cook_meal">Cucina Piatto</string>
    <string name="chef">Chef</string>
    <string name="recipe_name">Nome Ricetta</string>
    <string name="n_people">N° persone</string>
    <string name="select_ingredient">Seleziona Ingrediente</string>
    <string name="date_and_time">Data e Ora</string>
    <string name="send_notification">Invia una notifica ai membri della famiglia</string>
    <string name="time">Ora</string>
    <string name="date">Data</string>
    <string name="empty_portion">La porzione non può essere vuota</string>
    <string name="n_greater_0_error">Inserire un numero maggiore di 0</string>
    <string name="filters">Filtri</string>
    <string name="change_recipe">Cambia Ricetta\n</string>


</resources>